--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "timeline",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "^14.15.0",
+    "npm":"^6.14.8"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
